--- a/tutorial/accounts/templates/accounts/edit_profile.html
+++ b/tutorial/accounts/templates/accounts/edit_profile.html
@@ -6,16 +6,14 @@
 <title>Profile</title> {%endblock%}
 </head>
 <body>
-	{% block body %} {%csrf_token%}
+	{% block body %} 
 	<div class='container'>
-		<h1>Profile</h1>
-		<p>Username:{{user}}</p>
-		<p>Firstname:{{user.first_name}}</p>
-		<p>Lastname:{{user.last_name}}</p>
-		<p>Email:{{user.email}}</p>
+		<form method="post">
+			{%csrf_token%}
+			 {{form.as_p}}
+			<button type="submit" name="button">Submit</button>
+		</form>
 	</div>
-
-
 	{% endblock %}
 </body>
 </html>
