--- a/tutorial/accounts/templates/base.html
+++ b/tutorial/accounts/templates/base.html
@@ -11,27 +11,42 @@
 </head>
 <body>
 	<div class='container'>
-	<!-- Static navbar -->
-      <nav class="navbar navbar-default">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/">Work on Progress...</a>
-          </div>
-          <div id="navbar" class="navbar-collapse collapse">
-
-            <ul class="nav navbar-nav navbar-right">
-              <li><a href="/account/register">Register</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div><!--/.container-fluid -->
-      </nav>
-	{% block body %} <h1>Base</h1>{% endblock %}
+		<!-- Static navbar -->
+		<nav class="navbar navbar-default">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed"
+						data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+						aria-controls="navbar">
+						<span class="sr-only">Toggle navigation</span> <span
+							class="icon-bar"></span> <span class="icon-bar"></span> <span
+							class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="/">Work on Progress...</a>
+				</div>
+				<div id="navbar" class="navbar-collapse collapse">
+					{% if user.is_authenticated %}
+					<ul class="nav navbar-nav">
+						<li><a href='/account'>Home</a>
+						<li><a href='/account/logout'>Logout</a>
+						<li><a href='/account/profile'>Profile</a>
+						<li><a href='/account/profile/edit'>Edit Profile</a>
+						<li><a href='/account/change_password'>Change Password</a>
+						<li><a href='/account/reset_password'>Change Password</a>
+					</ul>
+					{% else %}
+					<ul class="nav navbar-nav navbar-right">
+						<li><a href='/account/login'>Login</a>
+							<li><a href="/account/register">Register</a></li>
+						</ul> {% endif %}
+				</div>
+				<!--/.nav-collapse -->
+			</div>
+			<!--/.container-fluid -->
+		</nav>
+		{% block body %}
+		<h1>Base</h1>
+		{% endblock %}
 	</div>
 </body>
 </html>
