--- a/tutorial/accounts/templates/base.html
+++ b/tutorial/accounts/templates/base.html
@@ -27,18 +27,28 @@
 				<div id="navbar" class="navbar-collapse collapse">
 					{% if user.is_authenticated %}
 					<ul class="nav navbar-nav">
-						<li><a href='/account'>Home</a>
+						<!--  <li><a href='/account'>Home</a>
 						<li><a href='/account/logout'>Logout</a>
 						<li><a href='/account/profile'>Profile</a>
 						<li><a href='/account/profile/edit'>Edit Profile</a>
 						<li><a href='/account/change_password'>Change Password</a>
-						<li><a href='/account/reset_password'>Change Password</a>
+						<li><a href='/account/reset_password'>Change Password</a>-->
+						<li><a href='/account'>Home</a>
+						<li><a href='{% url 'accounts:logout' %}'>Logout</a><!-- This accounts: is coming from namespace  -->
+						<li><a href='{% url 'accounts:view_profile' %}'>Profile</a>
+						<li><a href='{% url 'accounts:edit_profile' %}'>Edit Profile</a>
+						<li><a href='{% url 'accounts:change_password' %}'>Change Password</a>
+						<li><a href='{% url 'accounts:reset_password' %}'>Reset Password</a>
 					</ul>
 					{% else %}
+					<ul class ="nav navbar-nav">
+					<li><a href='{% url 'accounts:reset_password' %}'>Reset Password</a>
+					</ul>
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href='/account/login'>Login</a>
-							<li><a href="/account/register">Register</a></li>
-						</ul> {% endif %}
+						<li><a href='{% url 'accounts:login' %}'>Login</a>
+						<li><a href="{% url 'accounts:register' %}">Register</a></li>
+					</ul>
+					{% endif %}
 				</div>
 				<!--/.nav-collapse -->
 			</div>
