--- a/tutorial/accounts/templates/accounts/profile.html
+++ b/tutorial/accounts/templates/accounts/profile.html
@@ -18,6 +18,7 @@
 		 from user profile data -->
 		 <p>Phone:{{user.userprofile.phone}}</p>
 		 <p>City:{{user.userprofile.city}}</p>
+		 <img src="{{user.userprofile.image.url}}" width="240">
 	</div>
 
 
